--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">BoostIt</string>
     <string name="log_out_coach">LOG OUT COACH</string>
     <string name="create_new_workout">Create new workout</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+    <string name="log_out">Log Out</string>
+    <string name="my_account">My Account</string>
+    <string name="settings">Settings</string>
+    <string name="seperate">------------</string>
+    <string name="logout">Logout</string>
 </resources>
